syntax = "proto3";
package lab.jlhgxy520.equipment.rpc.proto.user;
option  java_package = "lab.jlhgxy520.equipment.rpc.proto.user";
option  java_outer_classname = "UserProto";
option  java_multiple_files = true;

service UserRpcServer{
    rpc login(loginRequest) returns(loginResponse){}
    rpc register(registerRequest) returns(registerResponse){}
    rpc upPassword(upPasswordRequest) returns(upPasswordResponse){}
    rpc upMessage(upMessageRequest) returns(upMessageResponse){}
}
message upMessageRequest {
    string uuid = 1;
    string school = 2;
    string filed1 = 3;
    string filed2 = 4;
}
message upMessageResponse {
    string state = 1;
}
message loginRequest {
    string username = 1;
    string password = 2;
    int32 power = 3;
}
message loginResponse {
    string state = 1;
    string uuid = 2;
    int32 power = 3;
    string school = 4;
    string filed1 = 5;
    string filed2 = 6;
}

message registerRequest {
    string username = 1;
    string password = 2;
    int32 power = 3;
    string school = 4;
    string filed1 = 5;
    string filed2 = 6;
}
message registerResponse {
    string state = 1;
}

message upPasswordRequest {
    string username = 1;
    string password = 2;
}
message upPasswordResponse {
    string state = 1;
}
